Fix BeamSamplerTests to use getFirst() for point retrieval and update SoftShadowTests for multithreading terminology